--- a/test.html
+++ b/test.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title></title>
+    </head>
 <body>
-    <div class=regform"><h1</div>registration form</h1></div>
-    <div class=mane">
+    <div class="regform"><h1> registration form</h1></div>
+    <div class="mane">
         <form>
-            <div class=mane">
-                <h2>Name</h2>
-                <input class="firstname"> type="rext" name="first-name"><br>
+            <div id="mane">
+                <h2 class="name">Name</h2>
+                <input class="firstname" type="rext" name="first_name"><br>
                 <label class="firstlabel">first name</label>
+                <input class="lastname" type="text" name="last_name">
+                <label class="lastlabel">last name</label>
             </div>
-            </form>
+
+            <h2 class="name">Company</h2>
+            <input class="company" type="text" name="company">
+
+            <h2 class=name">Email</h2>
+            <input class="email" type="text" name="email"
+
+            h2 class="name"> Phone</h2>
+            <input class="code" type="text" name="area_code">
+            <label class="area-code">Area Code</label>
+            <input class="number" type="text" name="phone">
+            <label class="phone-number">Phone Number</label>
+
+            <h2> class="name"> Subject</h2>
+            <select class="option" name="Subject">
+                <option> disabled="disabled" selected="selected">--Chose <Option></Option>
+                    <option> Subject 1</option>
+                    <option> Subject 2</option>
+                    <option> Subject 3</option>
+
+                </select>
+
+                <h2> id=student">Are you beginner </h2>
+
+                 
+
+                    </form>
                 
 
 
